tests/NormalTests/paczka1/small_fuzzy/40536258.err
Error in line 5: HHxRsLDhhsZ A33 46,[
Error in line 9: qf2f24sG16R A784 70,7
Error in line 12: WWYK74zD A49 30D6
Error in line 1: WWYK74zD A33 79,1
